src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceOptionalBoundsAreInterfaces.java
package typeSystemTestModels.valid.interfaces;

import java.util.ArrayList;
import java.util.List;
import java.lang.String;

public interface InterfaceOptionalBoundsAreInterfaces<T extends ArrayList & List<String>> {


}
